[West Northants] Fix postcode form text color on mobile.

--- a/web/cobrands/westnorthants/_variables.scss
+++ b/web/cobrands/westnorthants/_variables.scss
@@ -64,6 +64,7 @@ $nav_hover_background_colour: $primary;
 $front-main-color: $primary_b;
 $front-main-background: $blue-100;
 $postcodeform-background: $white;
+$postcodeform-color: $black;
 $postcodeform-color-desktop: $black;
 
 // Desktop
